Added user registration and some css.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,13 +12,13 @@
             <img src="images/login.png">
            </div>
            <form method="POST" action="">
-                <input type="email" name="email" required>
-                <input type="password" name="password" required>
+                <input type="email" name="email" required placeholder="Enter your email here." autocomplete="off">
+                <input type="password" name="password" required placeholder="Enter your password here">
                 <input type="submit" name="submit">
            </form>
            
            <div>
-                <a href="#">New Account? Sign Up.</a>
+                <a href="/register">New Account? Sign Up.</a>
            </div>
         </div>
     </main>
