--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,5 +1,6 @@
-<footer>
-    <p>
+<hr size="5">
+<footer class="nav justify-content-center">
+    <p class="heading">
         Web-based Information Systems Final Project &copy; MIS2021
     </p>
 </footer>
