--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,7 +1,8 @@
-<nav>
+<nav class="nav justify-content-center">
     <strong>
-        <span>
+        <span class="heading">
             Emergency Social Network [ESN]
         </span>
     </strong>
 </nav>
+<hr size="5">
