--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,6 +1,6 @@
 <hr size="5">
 <footer class="nav justify-content-center">
-    <p class="heading">
+    <p class="small text-muted" style="font-size:16px;">
         Web-based Information Systems Final Project &copy; MIS2021
     </p>
 </footer>
