--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,18 +15,24 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     width: 100%;
     min-height: 100%;
     padding: 20px;
 }
 .formContent{
-    /* border: 1px solid #211245; */
+    border: 1px solid #211245;
     border-radius: 10px 10px 10px 10px;
     -webkit-border-radius:10px 10px 10px 10px;
     background-color: #fff;
     padding: 30px;
     width: 90%;
     max-width: 450px;
+    position: relative;
+    padding: 0px;
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 .formFooter{
     background-color: #f6f6f6;
@@ -34,9 +40,104 @@ a {
     margin-top: 0px;
     padding: 10px;
     text-align: center;
-
+    -webkit-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 #icon {
-    width: 50%;
+    width: 10%;
 }
+
+input[type=button], input[type=submit], input[type=reset]{
+    background-color: #56baed;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 14px;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 10px 20px 10px 20px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+input[type=text],
+input[type=email],
+input[type=password]{
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 30px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus{
+    background-color: #fff;
+    border: 2px solid #5fbae9;
+}
+
+input[type=text]:placeholder,
+input[type=email]:placeholder,
+input[type=password]:placeholder{
+    color: #ccc;
+}
+
+/* Animation starts here */
+.fadeInDown{
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeInDown {
+    0%{
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100, 0);
+        transform: translate3d(0, -100, 0);
+    }
+    100%{
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+@-webkit-keyframes fadeInDown {
+    0%{
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100, 0);
+        transform: translate3d(0, -100, 0);
+    }
+    100%{
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+/* Animation ends here */
