--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
                 
                 <div class="formFooter">
                     <a href="/register">New Account? Sign Up.</a>
-                </div>'
+                </div>
            </div>
         </div>
     </main>
