--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,22 +6,26 @@
 </head>
 <body>
     <%- include('templates/header') %>
-    <main>
-        <div>
-            <div>
-                <img src="images/signup.png">
+    <main class="container">
+        <div class="wrapper fadeInDown">
+            <div class="formContent">
+                <div>
+                    <img src="images/signup.png" id="icon" alt="User icon">
+                </div>
+                
+                <%- include('templates/errors') %>
+                <form method="POST" action="/userRegister">
+                    <input type="email" name="email" required placeholder="Enter your email here." autocomplete="off">
+                    <input type="text" name="fullname" required placeholder="Enter your fullname here." autocomplete="off">
+                    <input type="password" name="password" required placeholder="Enter your password here.">
+                    <input type="password" name="confirmpassword" required placeholder="Enter your password again.">
+                    <input type="submit" name="submit">
+               </form>
+    
+                <div class="formFooter">
+                    <a href="/">Have account? Login Here</a>
+                </div>
             </div>
-            <form method="POST" action="">
-                <input type="email" name="email" required placeholder="Enter your email here." autocomplete="off">
-                <input type="text" name="fullname" required placeholder="Enter your fullname here." autocomplete="off">
-                <input type="password" name="password" required placeholder="Enter your password here.">
-                <input type="password" name="confirmpassword" required placeholder="Enter your password again.">
-                <input type="submit" name="submit">
-           </form>
-
-        <div>
-            <a href="/">Have account? Login Here</a>
-        </div>
         </div>
     </main>
     <%- include('templates/footer') %>
