Fixed all css issues, added some fancy stuff too.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
                 </form>
                 
                 <div class="formFooter">
-                    <a href="/register">New Account? Sign Up.</a>
+                    <a class="underlineHover" href="/register">New Account? Sign Up.</a>
                 </div>
            </div>
         </div>
