--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
                </form>
     
                 <div class="formFooter">
-                    <a href="/">Have account? Login Here</a>
+                    <a class="underlineHover" href="/">Have account? Login Here</a>
                 </div>
             </div>
         </div>
