--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,6 +1,5 @@
-<hr size="5">
-<footer class="nav justify-content-center">
-    <p class="small text-muted" style="font-size:16px;">
+<footer class="navbar justify-content-center nav">
+    <p class="small text-muted">
         Web-based Information Systems Final Project &copy; MIS2021
     </p>
 </footer>
