--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,8 +1,8 @@
-<nav class="nav justify-content-center">
+<!-- <nav class="nav justify-content-center"> -->
+<nav class="navbar navbar-expand-md bg-light border justify-content-center">
     <strong>
-        <span class="heading">
+        <p class="heading">
             Emergency Social Network [ESN]
-        </span>
+        </p>
     </strong>
 </nav>
-<hr size="5">
