--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,34 @@
-body{
+body {
     font-size: 16px;
     height: 100vh;
+    font-family: Lexend Deca,sans-serif;
 }
-.heading{
-    font-size: 25px;
-    color: #211245;    
+
+.navbar {
+    margin-top: 0px;
+    margin-bottom: -10px;
+    font-size: 22px;
+    color: #211245;
+    display: grid;
+    place-items: center;
+    height: 3em;
 }
-a {
-    color: #92badd;
-    display: inline-block;
-    text-decoration: none;
+.heading {
+    overflow: hidden;
+    white-space: nowrap;
+    width: 0;
+    animation: typing;
+    animation-duration: 1.5s;
+    animation-timing-function: steps(30, end);
+    animation-fill-mode: forwards;
 }
-.wrapper{
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+.wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -20,8 +37,7 @@ a {
     min-height: 100%;
     padding: 20px;
 }
-.formContent{
-    border: 1px solid #211245;
+.formContent {
     border-radius: 10px 10px 10px 10px;
     -webkit-border-radius:10px 10px 10px 10px;
     background-color: #fff;
@@ -34,7 +50,13 @@ a {
     -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
 }
-.formFooter{
+.formFooter a {
+    color: #92badd;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: 200;
+}
+.formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce9f1;
     margin-top: 0px;
@@ -43,12 +65,35 @@ a {
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
 }
-
-#icon {
-    width: 10%;
+/* Applying an underline Fade-in Animation to the link on hover*/
+.underlineHover:after {
+  display: block;
+  left: 0;
+  bottom: -10px;
+  width: 0;
+  height: 2px;
+  background-color: #56baed;
+  content: "";
+  transition: width 0.2s;
 }
 
-input[type=button], input[type=submit], input[type=reset]{
+.underlineHover:hover {
+  color: #0d0d0d;
+}
+
+.underlineHover:hover:after {
+  width: 100%;
+}
+.nav {
+    border-top: 2px solid rgba(0, 0, 0, 0.2);
+    font-size: 18px;
+    font-weight: 400;
+}
+#icon {
+    width: 15%;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
     background-color: #56baed;
     border: none;
     color: white;
@@ -72,7 +117,7 @@ input[type=button], input[type=submit], input[type=reset]{
 
 input[type=text],
 input[type=email],
-input[type=password]{
+input[type=password] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -93,19 +138,19 @@ input[type=password]{
 
 input[type=text]:focus,
 input[type=email]:focus,
-input[type=password]:focus{
+input[type=password]:focus {
     background-color: #fff;
     border: 2px solid #5fbae9;
 }
 
 input[type=text]:placeholder,
 input[type=email]:placeholder,
-input[type=password]:placeholder{
+input[type=password]:placeholder {
     color: #ccc;
 }
 
-/* Animation starts here */
-.fadeInDown{
+/* Animations starts here */
+.fadeInDown {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
@@ -117,8 +162,8 @@ input[type=password]:placeholder{
 @keyframes fadeInDown {
     0%{
         opacity: 0;
-        -webkit-transform: translate3d(0, -100, 0);
-        transform: translate3d(0, -100, 0);
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
     }
     100%{
         opacity: 1;
@@ -130,8 +175,8 @@ input[type=password]:placeholder{
 @-webkit-keyframes fadeInDown {
     0%{
         opacity: 0;
-        -webkit-transform: translate3d(0, -100, 0);
-        transform: translate3d(0, -100, 0);
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
     }
     100%{
         opacity: 1;
@@ -139,5 +184,4 @@ input[type=password]:placeholder{
         transform: none;
     }
 }
-
 /* Animation ends here */
