--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,3 +185,32 @@ input[type=password]:placeholder {
     }
 }
 /* Animation ends here */
+#content
+{
+    width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#citizen
+{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    background-color: #32c5ff;
+    color: white;
+    width: 100%;
+    height: fit-content;
+}
+#nickname
+{
+    font-weight: bold;
+    display: inline-block;
+}
+#messages
+{
+    width: 100%;
+    height: 350px;
+    overflow: auto;
+    background-color: #f1f1f1;
+    padding: 5px;
+}
