--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,9 @@
                 <div>
                     <img src="images/login.png" id="icon" alt="User icon">
                 </div>
-                <form method="POST" action="">
+                <%- include('templates/errors') %>
+                <%- include('templates/success') %>
+                <form method="POST" action="/citizenLogin">
                         <input type="email" name="email" required placeholder="Enter your email here." autocomplete="off">
                         <input type="password" name="password" required placeholder="Enter your password here">
                         <input type="submit" name="submit">
