--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+html{
+    height: 100vh;
+    height: -webkit-fill-available;
+    max-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 body {
     font-size: 16px;
     height: 100vh;
@@ -88,6 +95,11 @@ body {
     border-top: 2px solid rgba(0, 0, 0, 0.2);
     font-size: 18px;
     font-weight: 400;
+}
+.navHover > li:hover{
+    color: #fff;
+    background-color: #0d6efd;
+    border-radius: 25px;
 }
 #icon {
     width: 15%;
@@ -187,9 +199,10 @@ input[type=password]:placeholder {
 /* Animation ends here */
 #content
 {
-    width: 650px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    margin-left: -16px;
+    margin-top: -6px;
+    height: 490px;
 }
 #citizen
 {
@@ -209,8 +222,8 @@ input[type=password]:placeholder {
 #messages
 {
     width: 100%;
-    height: 350px;
+    height: 425px;
     overflow: auto;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     padding: 5px;
 }
