--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -6,17 +6,19 @@
 </head>
 <body>
     <%- include('templates/header'); %>
-    <main class="container">
-        <div class="fadeInDown" id="content">
-            <div id="citizen">
-                <div id="nickname">Hello <span id="fullname"><%= data.fullname %></span></div>
-                <div class="logout"><a id="logout" href="/logout">Log out</a></div>
-            </div>
-            <div id="messages">
-                <textarea id="sendMessage" rows="5" placeholder="Type your message here" required></textarea>
-                <div class="post-container"><input type="submit" value="Send Message" id="sendButton"></div>
+    <main class="d-flex flex-nowrap" style="height:500px;">
+        <%- include('templates/nav'); %>
+        <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 100%;">
+            <div class="fadeInDown" id="content">
+                <div id="messages"></div>
+                <div class="d-flex bd-highlight" style="width: 81%; border-top: 2px solid rgba(0,0,0,0.1);">
+                    <div class="p-2 w-150 bd-highlight" style="width: 100%;"><textarea id="sendMessage" placeholder="Type your message here" required="" style="width: 100%; height: 50px; resize: none; border-radius:15px; padding:5px; margin-left:20px;"></textarea></div>
+                    <div class="ms-auto p-2 bd-highlight"><input type="submit" value="Send Message" id="sendButton" style="height: 45px;margin-top: auto;margin-left: 25px; text-align: left;"></div>
+                </div>
             </div>
         </div>
+        
     </main>
+    <%- include('templates/footer'); %>
 </body>
 </html>
