--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,17 +1,17 @@
 <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;height: 500px;background-color: #f8f9fa!important; border-right: 2px solid rgba(0,0,0,0.1);">    
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-5"><%= data.fullname %></span>
+        <span class="fs-6" id="fullname"><strong><em><%= data.fullname %></em></strong></span>
     </a>
     <ul class="nav nav-pills flex-column mb-auto navHover">
         <li class="nav-item">
             <a href="/home" class="nav-link" aria-current="page" style="color: black;">
-            Home
+                Home
             </a>
         </li>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
                 <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-                Chat
+                    Chat
                 </button>
                 <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small navHover">
@@ -23,18 +23,18 @@
         </ul>
         <li>
             <a href="#" class="nav-link link-body-emphasis">
-            Share Status
+                Share Status
             </a>
         </li>
         <li>
             <a href="#" class="nav-link link-body-emphasis">
-            Search Information
+                Search Information
             </a>
         </li>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
                 <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-                Account
+                    Account
                 </button>
                 <div class="collapse" id="account-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small navHover">
