--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,17 @@
     <%- include('templates/header'); %>
     <main class="d-flex flex-nowrap" style="height:500px;">
         <%- include('templates/nav'); %>
-        
+        <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 1060px;">
+            <div id="content" style="width: 80%; margin:auto;">
+                <p class="text-center fs-4 lh-lg font-monospace text-wrap align-middle">
+                    ESN is a community platform that can be used by people in different times of emergency.
+                    When an emergency occurs, a member of the community/citizen can post on the platform and anyone who is near to them can render help such as <em>first aid, </em>
+                    or <em>calling for more help nearby.</em>
+                    The community has ordinary users also known as <em>citizens,</em> <em>coordinators</em> who are leaders at different levels that can follow up on these emergency cases,
+                    and <em>administrators</em> who are in charge of assigning different previleges to the system's users as well as performing other system administration tasks.
+                </p>
+            </div>
+        </div>
     </main>
     <%- include('templates/footer'); %>
 </body>
