--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -23,6 +23,11 @@
         </ul>
         <li>
             <a href="#" class="nav-link link-body-emphasis">
+                ESN Directory
+            </a>
+        </li>
+        <li>
+            <a href="#" class="nav-link link-body-emphasis">
                 Share Status
             </a>
         </li>
