--- a/views/listUsers.ejs
+++ b/views/listUsers.ejs
@@ -19,6 +19,7 @@
                             <th>Name</th>
                             <th>Username</th>
                             <th>Privilege</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -27,7 +28,7 @@
                                 <td><%= user.fullname %></td>
                                 <td><%= user.username %></td>
                                 <td><%= user.privilege %></td>
-                                
+                               <td><%= user.status %></td>
                             </tr>
                         <% }); %>
                     </tbody>
