--- a/views/listUsers.ejs
+++ b/views/listUsers.ejs
@@ -13,7 +13,7 @@
         <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 100%;">
             <div id="content">
                 
-                <table class="table">
+                <table>
                     <thead>
                         <tr>
                             <th>Name</th>
