include users link in the nav

--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -36,6 +36,12 @@
                 Search Information
             </a>
         </li>
+        <!-- TODO check if the logged in user is an admin -->
+        <li>
+            <a href="/users" class="nav-link link-body-emphasis">
+                Users
+            </a>
+        </li>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
                 <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
