--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -18,11 +18,13 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
-                            <form>
-                                
+                            <%- include('templates/errors') %>
+                            <%- include('templates/success') %>
+                
+                            <form method="POST" action="/updateUserProfile">
                                 <div class="form-group">
                                   <label >Username</label>
-                                  <input type="username" class="form-control" placeholder="<%= userProfile.username %>">
+                                  <input type="username" name="username" class="form-control" placeholder="<%= userProfile.username %>">
                                 </div>
                                 
                                 <div class="form-group" style="margin-top: 15px;">
