--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -18,18 +18,23 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
+                          
                             <%- include('templates/errors') %>
                             <%- include('templates/success') %>
                 
                             <form method="POST" action="/updateUserProfile">
-                                <div class="form-group">
+                              <div class="form-group">
+                                <input hidden type="text" name="_id" class="form-control" value="<%= userId %>">
+                              </div>  
+                              
+                              <div class="form-group">
                                   <label >Username</label>
-                                  <input type="username" name="username" class="form-control" placeholder="<%= userProfile.username %>">
+                                  <input type="username" name="username" class="form-control" placeholder="<%= userProfile.username %>" value="<%= userProfile.username %>">
                                 </div>
                                 
                                 <div class="form-group" style="margin-top: 15px;">
                                     <label>Privilege</label>
-                                    <select class="form-control" name="privilege">
+                                    <select class="form-control" name="privilege" value="<%= userProfile.privilege %>">
                                       <option>Citizen</option>
                                       <option>Cordinator</option>
                                       <option>Administrator</option>
@@ -38,20 +43,20 @@
 
                                   <div class="form-group" style="margin-top: 15px;">
                                     <label>Account Status</label>
-                                    <select class="form-control" name="status">
-                                      <option>Active</option>
-                                      <option>Inactive</option>
+                                    <select class="form-control" name="status" value="<%= userProfile.status %>">
+                                      <option <%= userProfile.status === 'Active' ? 'selected' : '' %>>Active</option>
+                                      <option <%= userProfile.status === 'Inactive' ? 'selected' : '' %>>Inactive</option>
                                     </select>
                                   </div>
 
                                   <div class="form-group" style="margin-top: 15px;">
                                     <label>Password</label>
-                                    <input type="password" class="form-control" name="password" placeholder="Password">
+                                    <input type="password" class="form-control" name="password" placeholder="Password" value="">
                                   </div>
 
                                   <div class="form-group" style="margin-top: 15px;">
                                     <label>Confirm Password</label>
-                                    <input type="password" class="form-control" name="confirmPassword" placeholder="Password">
+                                    <input type="password" class="form-control" name="confirmPassword" placeholder="Password" value="">
                                   </div>
 
                                 <button  style="margin-top: 20px;" type="submit" class="btn btn-primary">Update Profile</button>
