--- a/views/listUsers.ejs
+++ b/views/listUsers.ejs
@@ -13,29 +13,35 @@
         
         <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 100%;">
             <div id="content">
+                <div class="container-fluid">
+                    <div class="col-md-6">
+                        <h4 class="display-4">Users</h4>
                 
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Username</th>
-                            <th>Privilege</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
-                        <% users.forEach(user => { %>
+                    <table class="table table-striped">
+                        <thead>
                             <tr>
-                                <td><a href="/users/<%= user._id %>/"><%= user.fullname %></a></td>
-                                <td><%= user.username %></td>
-                                <td><%= user.privilege %></td>
-                               <td><%= user.status %></td>
+                                <th>Name</th>
+                                <th>Username</th>
+                                <th>Privilege</th>
+                                <th>Status</th>
                             </tr>
-                        <% }); %>
-                    </tbody>
+                        </thead>
+                        <tbody>
+                            
+                            <% users.forEach(user => { %>
+                                <tr>
+                                    <td><a href="/users/<%= user._id %>/"><%= user.fullname %></a></td>
+                                    <td><%= user.username %></td>
+                                    <td><%= user.privilege %></td>
+                                <td><%= user.status %></td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                        </table>
                     </table>
-                </table>
+                </div>
+                
+                </div>
             </div>
         </div>
         
