minor change for moving the footer out of the table
Co-authored-by: Hillary Tumukunde <thillary22@gmail.com>

--- a/views/listUsers.ejs
+++ b/views/listUsers.ejs
@@ -40,12 +40,15 @@
                         </table>
                     </table>
                 </div>
+
+
+                <%- include('templates/footer'); %>
                 
                 </div>
             </div>
         </div>
         
     </main>
-    <%- include('templates/footer'); %>
+    <!-- <%- include('templates/footer'); %> -->
 </body>
 </html>
