handle route to render the announcements
Co-authored-by: Hillary Tumukunde <thillary22@gmail.com>
Co-authored-by: nasracheal <nasracheal@gmail.com>

--- a/views/listUsers.ejs
+++ b/views/listUsers.ejs
@@ -16,6 +16,7 @@
                 <div class="container-fluid">
                     <div class="col-md-6">
                         <h4 class="display-4">Users</h4>
+                        <small>Click on the user's name to edit their profile</small>
                 
                     <table class="table table-striped">
                         <thead>
