bug fix for posting announcements
Co-authored-by: nasracheal <nasracheal@gmail.com>

--- a/views/listAnnouncements.ejs
+++ b/views/listAnnouncements.ejs
@@ -27,6 +27,7 @@
                                 rows="3"
                                 class="form-control"
                                 style="width: 100%"
+                                name="announcement"
                                 ></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Post</button>
