--- a/views/listAnnouncements.ejs
+++ b/views/listAnnouncements.ejs
@@ -33,6 +33,15 @@
                             <button type="submit" class="btn btn-primary">Post</button>
                           </form>
                         <% } %>
+
+                        <% announcements.forEach(an => { %>
+                            <div class="card">
+                                <div class="card-body">
+                                  <p><%= an.announcement %></p>
+                                  <small>Posted by <%= an.posterName %> at <%= an.sentTime %></small>
+                                </div>
+                              </div>
+                        <% }); %>
                 </div>
 
                 <%- include('templates/footer'); %>
