--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -32,7 +32,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-body-emphasis">
+            <a href="/searchctz" class="nav-link link-body-emphasis">
                 Search Information
             </a>
         </li>
