--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -27,7 +27,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-body-emphasis">
+            <a href="/share-status" class="nav-link link-body-emphasis">
                 Share Status
             </a>
         </li>
