--- a/views/searchctz.ejs
+++ b/views/searchctz.ejs
@@ -16,6 +16,39 @@
         li {
             margin-bottom: 10px;
         }
+        
+     h1 {
+      text-align: center;
+      color: #333;
+    }
+
+    label {
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    button {
+      background-color: #4caf50;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
     </style>
 </head>
 <body>
