--- a/views/privatechat.ejs
+++ b/views/privatechat.ejs
@@ -21,6 +21,6 @@
         
     </main>
     <%- include('templates/footer'); %>
-    <script src="js/chat.js"></script>
+    <script src="js/privatechat.js"></script>
 </body>
 </html>
