--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -16,7 +16,7 @@
                 <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small navHover">
                     <li><a href="/chatroom" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Publicly</a></li>
-                    <li><a href="/privatechat" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Privately</a></li>
+                    <li><a href="/esndirectory" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Privately</a></li>
                 </ul>
                 </div>
             </li>
