--- a/views/esndirectory.ejs
+++ b/views/esndirectory.ejs
@@ -28,7 +28,7 @@
                                     <td><%= user.username %></td>
 
                                     <td><%= user.onlinestatus %></td>
-                                <td><button><a href="privatechat">Chat privately</a></button></td>
+                                <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td>
                                 </tr>
                             <% }); %>
                         </tbody>
