--- a/views/searchctz.ejs
+++ b/views/searchctz.ejs
@@ -60,7 +60,8 @@
             <div id="content" style="width: 90%; margin:auto;">
             
                 <h1>Citizen List</h1>
-
+                
+                <%- include('templates/errors') %>
     <!-- Search Form -->
     <form action="/search" method="GET">
         <label for="username">Search by Username:</label>
