--- a/views/esndirectory.ejs
+++ b/views/esndirectory.ejs
@@ -25,10 +25,11 @@
                         <tbody>
 <% users.forEach(user => { %>
                                 <tr>
-                                    <td><%= user.username %></td>
+                                    <td><%= user.fullname %></td>
 
                                     <td><%= user.onlinestatus %></td>
-                                <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td>
+                                <!-- <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td> -->
+                                <td><button><a href="socketprivatechatview?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td>
                                 </tr>
                             <% }); %>
                         </tbody>
