socket implementation to handle status change for a user

--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -3,3 +3,4 @@
         Web-based Information Systems Final Project &copy; MIS2021
     </p>
 </footer>
+<script src="js/deactivatetracker.js"></script>
