--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,6 +1,7 @@
 <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;height: 500px;background-color: #f8f9fa!important; border-right: 2px solid rgba(0,0,0,0.1);">    
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-6" id="fullname"><strong><em><%= data.fullname %></em></strong></span>
+        <span class="fs-6" id="_id"><strong><em><%= data._id %></em></strong></span>
     </a>
     <ul class="nav nav-pills flex-column mb-auto navHover">
         <li class="nav-item">
