--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -24,7 +24,7 @@
                 
                             <form method="POST" action="/updateUserProfile">
                               <div class="form-group">
-                                <input hidden type="text" name="_id" class="form-control" value="<%= userId %>">
+                                <input hidden type="text" name="_id" id="_id" class="form-control" value="<%= userId %>">
                               </div>  
                               
                               <div class="form-group">
@@ -67,12 +67,7 @@
                         </div>
                     </div>
                 </div>
-
-                
-
             </div>
-    
-
             </div>
         </div>
         
