--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -265,3 +265,14 @@ input[type=password]:placeholder {
     font-size: 14px;
     font-weight: 300;
 }
+.snackbar {
+    display: none;
+    padding: 15px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: #f44336;
+    color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
