update on esn directory status

--- a/views/esndirectory.ejs
+++ b/views/esndirectory.ejs
@@ -26,8 +26,8 @@
 <% users.forEach(user => { %>
                                 <tr>
                                     <td><%= user.username %></td>
-
-                                    <td><%= user.onlinestatus %></td>
+                                    <td><%= user.onlineoffline %></td>
+                                  
                                 <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td>
                                 </tr>
                             <% }); %>
