online status changes

--- a/views/esndirectory.ejs
+++ b/views/esndirectory.ejs
@@ -27,7 +27,7 @@
                                 <tr>
                                     <td><%= user.fullname %></td>
 
-                                    <td><%= user.onlinestatus %></td>
+                                    <td><%= user.onlineoffline %></td>
                                 <!-- <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td> -->
                                 <td><button><a href="socketprivatechatview?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td>
                                 </tr>
