--- a/views/esndirectory.ejs
+++ b/views/esndirectory.ejs
@@ -25,7 +25,7 @@
                         <tbody>
 <% users.forEach(user => { %>
                                 <tr>
-                                    <td><%= user.username %></td>
+                                    <td><%= user.fullname %></td>
 
                                     <td><%= user.onlineoffline %></td>
                                 <!-- <td><button><a href="privatechat/?p1=<%= user._id %>&p2=<%= data.uid %>">Chat privately</a></button></td> -->
