updated the public link

--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -39,11 +39,11 @@
                 <div class="collapse" id="account-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small navHover">
 		<li><a href="/searchctz" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of Citizens</a></li>
-                    <li><a href="/priv-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of private 
+                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of private 
 messages</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
+                    <li><a href="/public-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
 messages</a></li>
-<li><a href="/#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
+<li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
 announcements</a></li>
                 </ul>
                 </div>
