--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,8 +1,7 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;height: 500px;background-color: #f8f9fa!important; border-right: 2px solid rgba(0,0,0,0.1);">    
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;height: 600px;background-color: #f8f9fa!important; border-right: 2px solid rgba(0,0,0,0.1);">    
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-6" id="fullname"><strong><em><%= data.fullname %></em></strong></span>
-        <span class="fs-6" id="_id"><strong><em><%= data._id %></em></strong></span>
-    </a>
+         </a>
     <ul class="nav nav-pills flex-column mb-auto navHover">
         <li class="nav-item">
             <a href="/home" class="nav-link" aria-current="page" style="color: black;">
@@ -23,7 +22,7 @@
             </li>
         </ul>
         <li>
-            <a href="#" class="nav-link link-body-emphasis">
+            <a href="/esndirectory" class="nav-link link-body-emphasis">
                 ESN Directory
             </a>
         </li>
@@ -39,12 +38,12 @@
                 </button>
                 <div class="collapse" id="account-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small navHover">
-		<li><a href="/searchctz" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of Citizens</a></li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of private 
+		<li><a href="/searchctz" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Search Citizens</a></li>
+                    <li><a href="private-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Search private 
 messages</a></li>
-                    <li><a href="/public-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
+                    <li><a href="/public-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Search public 
 messages</a></li>
-<li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">List of public 
+<li><a href="/announcements-search" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Search public 
 announcements</a></li>
                 </ul>
                 </div>
